// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`is the Movie quote valid All items need to have a actor 1`] = `
Object {
  "actor": Any<String>,
  "character": "",
  "quote": "TEST",
  "title": "",
  "year": 2001,
}
`;

exports[`is the Movie quote valid All items need to have a actor 2`] = `
Object {
  "actor": Any<String>,
  "character": "",
  "quote": "TE32312ST2",
  "title": "",
  "year": 2001,
}
`;

exports[`is the Movie quote valid All items need to have a character 1`] = `
Object {
  "actor": "",
  "character": Any<String>,
  "quote": "TEST",
  "title": "",
  "year": 2001,
}
`;

exports[`is the Movie quote valid All items need to have a character 2`] = `
Object {
  "actor": "",
  "character": Any<String>,
  "quote": "TE32312ST2",
  "title": "",
  "year": 2001,
}
`;

exports[`is the Movie quote valid All items need to have a quote 1`] = `
Object {
  "actor": "",
  "character": "",
  "quote": Any<String>,
  "title": "",
  "year": 2001,
}
`;

exports[`is the Movie quote valid All items need to have a quote 2`] = `
Object {
  "actor": "",
  "character": "",
  "quote": Any<String>,
  "title": "",
  "year": 2001,
}
`;

exports[`is the Movie quote valid All items need to have a title 1`] = `
Object {
  "actor": "",
  "character": "",
  "quote": "TEST",
  "title": Any<String>,
  "year": 2001,
}
`;

exports[`is the Movie quote valid All items need to have a title 2`] = `
Object {
  "actor": "",
  "character": "",
  "quote": "TE32312ST2",
  "title": Any<String>,
  "year": 2001,
}
`;

exports[`is the Movie quote valid All items need to have a year 1`] = `
Object {
  "actor": "",
  "character": "",
  "quote": "TEST",
  "title": "",
  "year": Any<Number>,
}
`;

exports[`is the Movie quote valid All items need to have a year 2`] = `
Object {
  "actor": "",
  "character": "",
  "quote": "TE32312ST2",
  "title": "",
  "year": Any<Number>,
}
`;
